Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.21
-
Fix Version/s: 10.1.22
-
Component/s: Storage Engine - InnoDB
-
Labels:
-
Environment:GNU/Linux (HAVE_POSIX_FALLOCATE)
Description
The InnoDB data file extension code that was refactored in MDEV-11556 fails to extend any data files when innodb_use_fallocate=ON. Even the mysql-test-run bootstrap fails:
./mtr --mysqld=--innodb-use-fallocate --suite=innodb
|
2017-02-16 9:41:06 139742722718464 [ERROR] InnoDB: preallocating file space for file './mysql/innodb_table_stats.ibd' failed. Current size 65536, desired size 65536
|
In MDEV-11687 (MariaDB Server 10.2.4) the parameter innodb_use_fallocate was deprecated, because posix_fallocate() will always be used when available. So, this regression only affects MariaDB Server 10.1.21.
Attachments
Issue Links
- is caused by
-
MDEV-11556 InnoDB redo log apply fails to adjust data file sizes
-
- Closed
-
- is duplicated by
-
MDEV-12027 posix_fallocate returned OS error 201.
-
- Closed
-